--- a/.gitignore
+++ b/.gitignore
@@ -41,7 +41,8 @@ $RECYCLE.BIN/
 .LSOverride
 
 # Icon must end with two \r
-Icon
+Icon
+
 
 # Thumbnails
 ._*
@@ -97,3 +98,4 @@ node_modules
 # Optional REPL history
 .node_repl_history
 
+typings
