--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
   "bugs": {
     "url": "https://github.com/Canain/t2get/issues"
   },
-  "homepage": "https://github.com/Canain/t2get#readme"
+  "homepage": "https://github.com/Canain/t2get#readme",
+  "bin": {
+	  "t2get": "app.js"
+  }
 }
