--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "async": "^1.5.2",
     "phantom": "^0.8.4",
-    "phantomjs": "^2.1.2",
+    "phantomjs-prebuilt": "^2.1.3",
     "prompt": "^0.2.14"
   },
   "devDependencies": {},
@@ -24,6 +24,6 @@
   },
   "homepage": "https://github.com/Canain/t2get#readme",
   "bin": {
-	  "t2get": "app.js"
+    "t2get": "app.js"
   }
 }
