--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "t2get",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Georgia Tech T-Square Automated Crawler",
   "main": "app.js",
   "scripts": {
@@ -10,6 +10,7 @@
   "license": "MIT",
   "dependencies": {
     "async": "^1.5.2",
+    "minimist": "^1.2.0",
     "phantom": "^0.8.4",
     "phantomjs-prebuilt": "^2.1.3",
     "prompt": "^0.2.14"
